@@ -557,6 +557,7 @@ contents of any or all annotate pragmas are shown when you use the help
 command on a script.  The text is a static string expression.  Type type of
 annotation field can be:
 <ul>
+<li><b>accounts</b> - project names, funding codes, or other identifiers.</li>
 <li><b>author</b> - who wrote the script. (This cannot be a team.member
 variable.)</li>
 <li><b>bugs</b> - known bugs.  It may be used multiple times.</li>
